--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
             margin: 0;
         }
         img {
+            margin: 0;
             max-width: 100%;
         }
     </style>
 </head>
 <body>
     <img src="header.jpg" alt="" srcset="">
+    <img src="hero.jpg" alt="" srcset="">
 </body>
 </html>
