--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <body>
     <img src="header.jpg" alt="" srcset="">
     <img src="hero.jpg" alt="" srcset="">
+    <img src="acustica.jpg" alt="">
 </body>
 </html>
