--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body {
             margin: 0;
+            border : 10px solid #192365;
         }
         img {
             margin: 0;
